# isaac-core

./: .clang-format  .gitignore  LICENSE  README.md  build.sh  meson.build  wercker.yml
app/: main.cpp  meson.build
benchmark/: meson.build  op_randomIdGen.cpp  randomIdGen.cpp
debug/: config.txt
include/: GPIOCLASS.h  LEDCLASS.h  app.hpp  config.hpp  device.hpp  deviceList.hpp  deviceType.hpp  device_Buzzer.hpp  device_FlameSensor.hpp  device_LED.hpp  device_Led.hpp  device_Smart_Switch.hpp  device_Switch.hpp  device_Temperature.hpp  device_TripWire.hpp  device_buzzer.hpp  device_driver.hpp  device_temp.hpp  devices_all.hpp  gpio.hpp  utils.hpp
scripts/: emulate_rasp.sh  fix_gpio_permissions.sh
src/: GPIOCLASS.cpp  LEDCLASS.cpp  app.cpp  config.cpp  device.cpp  deviceList.cpp  device_Buzzer.cpp  device_FlameSensor.cpp  device_LED.cpp  device_Led.cpp  device_Smart_Switch.cpp  device_Switch.cpp  device_Temperature.cpp  device_TripWire.cpp  device_buzzer.cpp  device_temp.cpp  gpio.cpp  main.cpp  meson.build  utils.cpp
subprojects/: gtest.wrap  json.wrap  spdlog.wrap  uWS.wrap
test/: config_test.cpp  deviceList_test.cpp  deviceType_test.cpp  device_Buzzer_test.cpp  device_FlameSensor_test.cpp  device_Led_test.cpp  device_Smart_Switch_test.cpp  device_Switch_test.cpp  device_Temperature_test.cpp  device_TripWire_test.cpp  device_temp_test.cpp  device_test.cpp  meson.build  test.cpp
